k8s/overlays/mcg/l7-rilb-mc-az1/http-route.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: private-hello-route
  namespace: hello
  labels:
    gateway: internal-http-gw
spec:
  parentRefs:
  - name: internal-http-gw
    namespace: hello
  rules:
  - backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: hello
      port: 80
